[package]
name = "moviemail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.11.11"
serde = "1.0.140"
serde_derive = "1.0.140"
serde_json = "1.0.82"
toml = "0.5.9"
futures = "0.3.21"