[package]
name = "moviemail"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
futures = "0.3"
lettre = "0.10"
shellexpand = "3.1.0"
log = "0.4.17"
env_logger = "0.10.0"